# MT

./: .gitignore  README.md  app.py  debug_loop.py  debug_torch_loader.py  ens_search_optuna.py  ensembling_search.py  environment.yaml  make_and_save_preds.py  optuna_single_process.py  paper_tables.ipynb  pyproject.toml  requirements.txt  sandbox.ipynb  scratch.py  search_ensemble_grid..py  segmentation_train.py  test.py  train.py  try_load.py
configs/: train.yaml
configs/callbacks/: default.yaml  segmentation.yaml  swa.yaml
configs/datamodule/: dental_caries.yaml  dental_caries_test.yaml  dental_restorations.yaml
configs/experiment/: yolov5.yaml
configs/logger/: wandb.yaml
configs/module/: deformable_detr.yaml  detr.yaml  efficientdet.yaml  faster_rcnn.yaml  retinanet.yaml  unet.yaml  unet_plus_plus.yaml  unet_torch.yaml  vfnet.yaml  yolo3.yaml  yolov5.yaml  yolox.yaml
configs/trainer/: default.yaml  segmentation.yaml
configs/transforms/: default.yaml  segmentation.yaml
mt/: __init__.py  inference.py  paper_plots.py  testing_pipeline.py  training_pipeline.py
mt/configs/: segmentation.yaml  train.yaml
mt/configs/callbacks/: default.yaml
mt/configs/datamodule/: dental_caries_test.yaml  dental_restorations.yaml
mt/configs/experiment/: faster_rcnn.yaml  segmentation.yaml  unet.yaml
mt/configs/module/: deformable_detr.yaml  efficientdet.yaml  retinanet.yaml  unet.yaml  yolo3.yaml  yolov5.yaml
mt/configs/trainer/: default.yaml
mt/core/: __init__.py  bbox.py  composite.py  convertions.py  prediction.py  record.py  record_components.py  record_defaults.py
mt/data/: __init__.py  dataset.py  parser.py  random_splitter.py  record_collection.py
mt/data/parsers/: __init__.py  pasacal_voc.py
mt/datamodules/dental/: __init__.py  dental_caries.py  dental_restorations.py
mt/evaluation/: ensembling.py  prediction_evaluation.py
mt/evaluation/boxes_fusion/: ensemble_boxes_nmw.py
mt/evaluation/comparison/: common.py  comparision_instances.py  core.py  gold_standard.py  pairwise_comparison.py
mt/evaluation/pycocotools/: cocoeval.py
mt/metrics/: coco_api_wrapper.py  coco_metric.py  common.py
mt/models/: __init__.py
mt/models/common/: inference.py
mt/models/efficientdet/: __init__.py  dataloaders.py  model.py  prediction.py
mt/modules/: __init__.py  efficientdet.py  mmdet_adapter.py  segmentation.py  yolov5.py
mt/transforms/: __init__.py  albumentations_adapter.py  transforms_composer.py
mt/utils/: __init__.py  bbox_inverse_transform.py  conver_to_coco.py  download_utils.py  format_handling.py  ice_utils.py  imageio.py  logger.py  path_utils.py  soft_imports.py  visualization.py
notebooks/: ensemble.ipynb  evaluate.ipynb  fiftyone.ipynb  load_ensemble.ipynb  merge_dataset.ipynb  merge_test.ipynb  paper_plots.ipynb  predict.ipynb  predict_batches.ipynb
scripts/: create_seg_predicitons.py  ens_search_optuna.py  ens_search_optuna_single_process.py  make_and_save_preds.py  search_ensemble_grid..py
segmentation/models/: Unet.py
segmentation/modules/: segmentation.py
segmentation/utils/: losses.py
src/: __init__.py  sandbox.ipynb  testing_pipeline.py  training_pipeline.py
src/core/: __init__.py  bbox.py  class_map.py  composite.py  convertions.py  prediction.py  record.py  record_components.py  record_defaults.py  tasks.py
src/data/: __init__.py  dataset.py  parser.py  random_splitter.py  record_collection.py  transform_dataloader.py
src/evaluation/: ensembling.py  prediction_evaluation.py
src/lightning_modules/: efficientdet.py
src/metrics/: coco_api_wrapper.py  coco_metric.py
src/models/: __init__.py
src/modules/: __init__.py  efficientdet.py  mmdet_adapter.py  segmentation.py  torch_segmentation.py  yolov5.py
src/notebooks/: debug.ipynb
src/transforms/: __init__.py  albumentations_adapter.py  albumentations_utils.py  transforms_composer.py
src/utils/: __init__.py  bbox_inverse_transform.py  conver_to_coco.py  format_handling.py  ice_utils.py  imageio.py  logger_utils.py  torch_utils.py
tests/: conftest.py  test_datamodule.py  test_hydra_composition.py  test_prediction.py  test_scratchpad.py  test_seg.py  test_silver_standard_generation.py  test_training_pipeline.py
tests/core/: test_prediction.py
tests/data/: test_dataset.py
tests/datamodules/: test_datamodule.py  test_dental_restorations.py
tests/evaluate/: test_ensemble_boxes_wbf.py
tests/models/: __init__.py
tests/modules/: test_efficientdet.py  test_yolov5.py
tests/transforms/: test_bbox_inverse_transform.py  test_transforms_composer.py
(+129 files in other folders)
